--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8cc0ba">  <td>18/07/18 06:06:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetMultipleAPITest.getCall()[pri:0, instance:demo.GetMultipleAPITest@13deb50e]">getCall</td> 
-  <td>main@1383547042</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>18/12/11 07:48:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getCall()[pri:0, instance:demo.GetAPITest@3abbfa04]">getCall</td> 
+  <td>main@3213500</td>   <td></td> </tr>
 </table>
